# Arbor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
backend/approval/r2pip_approval/: __init__.py  app.py  keys.py  models.py  service.py
docs/adr/: 001-field-architecture.md  002-supervised-swarm.md  003-temporal-spine.md  004-mcp-gateway-chokepoint.md  005-protocol-split.md  006-polyglot-persistence.md  007-focal-graph.md  008-taint-tool-firewall.md  009-approval-tokens.md  010-monorepo.md  011-python-reference-implementations.md  README.md
docs/rfc/: 00-planning.md  01-philosophy.md  02-swarm-architecture.md  03-tool-ecosystem.md  04-knowledge-memory.md  05-ase-workflow.md  06-infrastructure.md  07-security-governance.md  08-ux.md  09-database.md  10-apis.md  11-repository.md  12-roadmap.md  13-implementation-checklists.md  14-agent-prompting-standards.md  15-reference-implementation-status.md  glossary.md
examples/: mission-walkthrough.md
memory/r2pip_memory/: __init__.py  assembler.py  claims.py  consolidation.py  models.py  store.py  tokens.py
memory/tests/: memory_helpers.py  test_assembler.py  test_claims.py  test_consolidation.py  test_store.py
platform/r2pip_platform/: __init__.py  __main__.py  app.py  corpus.py  demo.py  system.py  types.py
platform/tests/: platform_helpers.py  test_platform_agents.py  test_platform_app.py  test_platform_demo.py  test_platform_mission.py  test_platform_tools.py
scripts/: bootstrap.ps1  run_demo.py
(+56 files in other folders)
